# minecraft-server-mod-filter

./: Cargo.toml  README.md  nohup.out
.github/workflows/: workflow.yml
src/: cli.rs  main.rs  manifest.rs  module.rs  utils.rs
src/cmp/: mod.rs
src/jar/: fs.rs  mod.rs
src/parse/: manifest.rs
src/verifier/: mcmode.rs  mod.rs
tests/: curseforge.html  manifest.json
