[package]
name = "minecraft-server-mod-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.43.0", features=['rt', 'rt-multi-thread']}
reqwest = "0.12.12"
regex = "1.11.1"
log = "0.4.25"
env_logger = "0.11.6"
async-trait = "0.1.85"
futures = "0.3.31"
clap = { version = "4.5.27", features = ["derive"] }
